image error fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing=10>
       <td>
-        <img src="images/IMG_0457 2.jpeg" alt="Profile Picture" style="width:100px;height:130px">
+        <img src="Images/IMG_0457 2.jpeg" alt="Profile Picture" style="width:100px;height:130px">
       </td>
       <td>
         <h1>Uzair Akram</h1>
