--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@ Abiding by hospital policies procedures.<br>
         <td>C</td>
       </tr>
       <tr>
+        <td>JAVA</td>
+      </tr>
+      <tr>
         <td>Software Engineering</td>
       </tr>
       <tr>
