--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@ Abiding by hospital policies procedures.<br>
     <hr>
       <table cellspacing=30>
         <tr>
+          <td><a href="https://github.com/uzairakram0">GitHub</a></td>
           <td>
             <a href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">htmlcheatsheet</a></td>
           <td><a href="contact.html">contact me</a></td>
