--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <h3>Contact</h3>
     <p>Name: Uzair Akram</p>
     <p>My Contact</p>
-    <p>email: uzairakram12@yahoo.com</p>
+    <p>email: uzair.akram@outlook.com</p>
     <p>phone: (682)-554-2164</p>
 
     <form class="" action="mailto:uzairakram12@yahoo.com" method="post" enctype="text/plain">
