--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,9 @@
 
     <form class="" action="mailto:uzairakram12@yahoo.com" method="post" enctype="text/plain">
       <label>Your Name: </label>
-      <input type="text" name="yourName" value="">
-      <br>
-      <label>Color:   </label>
-      <input type="color" name="FavColor" value=""><br>
-      <label>checkbox</label>
-      <input type="checkbox" name="Check" value=""><br>
+      <input type="text" name="yourName" value=""><br>
       <label>Email:</label>
       <input type="email" name="yourEmail" value=""><br>
-      <label>password: </label>
-      <input type="password" name="yourPassword" value=""><br>
       <label>Your Message:</label>
       <textarea name="yourMessage" rows="8" cols="80"></textarea><br>
       <input type="submit" name="">
