--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@ Abiding by hospital policies procedures.<br>
     <hr>
     <h3>Relevant course Work</h3>
     <table cellspacing=20px>
+      <th>Course</th>
+      <th>coursework</th>
       <tr>
         <td>Software Engineering</td>
         <td>Development of  full scale application programs. Development techniques: Agile development document requrirements
