--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,14 @@
     <title>Uzair Akram</title>
   </head>
   <body>
-    <h3>Contact</h3>
+    <h2 align=center>Contact</h2>
+    <h5><a href="index.html">Home</a></h5>
+    <b><p>My Contact</p></b>
     <p>Name: Uzair Akram</p>
-    <p>My Contact</p>
     <p>email: uzair.akram@outlook.com</p>
     <p>phone: (682)-554-2164</p>
 
+    <b><p>Contact Me</p></b>
     <form class="" action="mailto:uzairakram12@yahoo.com" method="post" enctype="text/plain">
       <label>Your Name: </label>
       <input type="text" name="yourName" value=""><br>
@@ -24,3 +26,4 @@
 
   </body>
 </html>
+
