Updated site design

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Uzair Akram</title>
+    <title>Contact Me</title>
   </head>
   <body>
     <h2 align=center>Contact</h2>
@@ -26,4 +26,3 @@
 
   </body>
 </html>
-
