--- a/cv.html
+++ b/cv.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <meta charset="utf-8">
     <meta name="description" content="This is my personal website and also acts as my cv">
     <meta name="author" content="Uzair Akram">
-    <title>Uzair's Site</title>
+    <title>Curriculum vitae</title>
 
   </head>
 
   <body>
+
     <table cellspacing=10>
       <td>
         <img src="Images/webpic.jpeg" alt="Profile Picture" style="width:100px;height:130px">
       </td>
       <td>
         <h1>Uzair Akram</h1>
-        <p><em>Computer Science Student at <strong><a href="https://www.unt.edu">UNT</a></strong></em></p>
+        <p><em>Bachelor's of Science in Computer Science at <strong><a href="https://www.unt.edu">UNT</a></strong></em></p>
         <p>Programmer and developer.</p>
       </td>
     </table>
@@ -61,7 +63,8 @@
       </td>
 
         <td>
-          <b>Role:</b> Jr. Software Engineer:
+          <b>Role:</b> Jr. Software Engineer: DevOps, Microsoft Azure, Angular and .Net Core development and SQL server.
+          <br>Web app development.
         </td>
       </tr>
       <tr>
@@ -129,8 +132,11 @@ Abiding by hospital policies procedures.<br>
       </tr>
     </table>
 
-
+    <table cellspacing=30>
+      <td>
     <p><em><b>Work/Professional ethic:</b> I believe in a virtue based ethic when it comes to my work and my profession, I believe that I should always strive to be a better programmer and improve upon my skills to make myself a better professional in my field and perform my service with deddication and dilligence. </em></p>
+      </td>
+    </table>
     <br>
     <hr>
     <h3>Relevant course Work</h3>
@@ -428,7 +434,6 @@ Abiding by hospital policies procedures.<br>
           <td><a href="memes.html">Memes</a></td>
         </tr>
       </table>
-
 
   </body>
 </html>
