--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    
     <meta charset="utf-8">
     <meta name="description" content="This is my personal website and also acts as my cv">
     <meta name="author" content="Uzair Akram">
@@ -9,426 +10,17 @@
   </head>
 
   <body>
-    <table cellspacing=10>
-      <td>
-        <img src="Images/webpic.jpeg" alt="Profile Picture" style="width:100px;height:130px">
-      </td>
-      <td>
-        <h1>Uzair Akram</h1>
-        <p><em>Computer Science Student at <strong><a href="https://www.unt.edu">UNT</a></strong></em></p>
-        <p>Programmer and developer.</p>
-      </td>
-    </table>
+    <h1 align=center>Uzair Akram</h1>
 
-
-    <hr>
-    <h3>Education</h3>
-    <ul>
-      <li>University of North Texas   <em>Graduated May 2020</em></li>
-        <ul>
-          <li><em>Bachelors of science in Computer Science</em></li>
-          <li><em>Honor roll: Magna Cum Laude, President's list, Dean's list</em></li>
-        </ul>
-      <li>
-        <table>
-        <tr>
-          <td>Tarrant County College</td>
-          <td><strong>(Honor's list)</strong></td>
-        </tr>
-      </table>
-
-      </li>
-        <ul>
-          <li><em>Associates of Mathematics</em></li>
-        </ul>
-        <br>
-      <li>Trinity High School</li>
-    </ul>
-
-
-    <hr>
-
-    <h3>Work Experience</h3>
-    <table cellspacing="70">
-      <thead>
-        <th>Experience</th>
-        <th>Work</th>
-      </thead>
+    <table cellspacing=30>
       <tr>
-        <td><strong>EDHC</strong><br>
-          <em><strong>Address:</strong><br> 2100 Ross Ave #550, Dallas, TX 75201</em><br>
-        June 22, 2020–Present
-      </td>
-
-        <td>
-          <b>Role:</b> Jr. Software Engineer:
-        </td>
-      </tr>
-      <tr>
-        <td><strong>NCAS</strong><br>
-          <em>NASA Aerospace Sholars Program</em><br>
-        <em>Flight research center, CA</em>
-        <br>March 20, 2018–August 2, 2018<br>
-        On-Site: July 25–August 2, 2018
-      </td>
-
-        <td>
-          <b>Role:</b> Software Developer: Developing mission critical software for Rover.<br>
-          Hands on, On-Site experience at NASA center.<br>
-          Prototyping a Mars Rover; working with research and design team on robotic hardware.<br>
-          Writing mission critical software.<br>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <strong>Kumon Academy,</strong><br>
-          <em>Euless, Tx</em><br>
-          June 2014-August 2014
-        </td>
-        <td>
-          <b>Tutor,</b> Grading student assignments in primary subject areas of math and reading.<br>
-          Accesing students, identifying problem areas for students, coaching them in learning and improving.
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <strong>RMG Car Sales,</strong><br>
-          <i>Mainsfield, TX</i><br>
-          May 2014-September 2015
-        </td>
-        <td>
-          <b>Dealership Agent,</b> Networking with customers.<br>
-          Excel data entry and formating Spread Sheets.
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <strong>Walmart</strong><br>
-          <i>Euless, TX</i><br>
-          October 2015-November 2017
-        </td>
-        <td>
-          <strong>Sales Associate,</strong> Lawn and Garden <br>
-          Managing a cash register, cash handaling, processing multiple payment methods. <br>
-          Inventory, counting items and managing inventory.<br>
-          Assembling Bikes, furniture and grills
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <strong>Clinical Rotations,</strong><br>
-          <em>Harris HEB hospital Euless, TX</em><br>
-          <em>Trinity High School, Tech center Healthcare program</em> <br>
-          November 2013-May2014
-        </td>
-        <td>
-          Assisting Health care professionals perform their daily tasks. Teamwork in a hospital and professional setting. Practicing safe health care around patients, preventing cross contamination.
-Abiding by hospital policies procedures.<br>
-        <em>Departments: Intensive care Unit, Medical Laboratory, Endoscopy, Respiratory Therapy, Physical Therapy, Radiology, Post-operative care, Fitness Center.  </em>
-        </td>
+        <td><a href="cv.html">Curriculum vitae</a></td>
+        <td><a href="contact.html">Contact Me</a></td>
+        <td><a href="https://github.com/uzairakram0">GitHub</a></td>
+        <td><a href="memes.html">Memes</a></td>
+        <td><a href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">html cheatsheet</a></td>
       </tr>
     </table>
-
-
-    <p><em><b>Work/Professional ethic:</b> I believe in a virtue based ethic when it comes to my work and my profession, I believe that I should always strive to be a better programmer and improve upon my skills to make myself a better professional in my field and perform my service with deddication and dilligence. </em></p>
-    <br>
-    <hr>
-    <h3>Relevant course Work</h3>
-    <table cellspacing=20px>
-      <th>Course</th>
-      <th>coursework</th>
-      <tr>
-        <td>Capstone Project</td>
-        <td></td>
-      </tr>
-      <tr>
-      <tr>
-        <td>Databases</td>
-        <td></td>
-      </tr>
-      <tr>
-      <tr>
-        <td>Artificial Intelligence</td>
-        <td></td>
-      </tr>
-      <tr>
-      <tr>
-        <td>Operating Systems</td>
-        <td></td>
-      </tr>
-      <tr>
-      <tr>
-        <td>Computer Security</td>
-        <td></td>
-      </tr>
-      <tr>
-      <tr>
-        <td>Formal Languages, Automata and Computability</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Machine Learning</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Networks</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Algorithms</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Software Engineering</td>
-        <td>Development of  full scale application programs. Development techniques: Agile development document requrirements
-        conducting validation testing, unit testing, integration testing and heuristic evaluation. Modleing development process
-        using process models and UML diagrams, Use-Case diagram, component diagrams, Activity diagrams and class diagrams</td>
-      </tr>
-      <tr>
-        <td>Sytems programming</td>
-        <td>Writing system software using C programming language in linux environment, creating process and using
-          multi-threading. Writing Scripts BASH, GAWK and python. C Bitwise programming.</td>
-      </tr>
-      <tr>
-        <td>Data Structures<br>and Algorithms</td>
-        <td>Algortihm analysis: asymptotic analysis, recursive analysis. Abstact Data Types(ADTs): trees, stacks, queues, heap,
-        hash-tables. Algorithms: search Algorithms</td>
-      </tr>
-      <tr>
-        <td>Discrete Structures</td>
-        <td>Discrete math, set theory: set notations, set former notaion. Classes of relationships: Surjection, bijection and
-          injection. Automata theory, Graph theory, combinatorics, Algorithm analysis.</td>
-      </tr>
-      <tr>
-        <td>Data Structures</td>
-        <td>ADT implementation, Stacks, Queues, Trees, Graphs, Heaps, Hash tables</td>
-      </tr>
-      <tr>
-        <td>Computer Organization</td>
-        <td>Computer Architecture, Virtual machine concept, compilation process, compilling, assembling and linking. Assembly
-        Programming using MASM.</td>
-      </tr>
-      <tr>
-        <td>Digital Logic</td>
-        <td>Binary data representation, binary arithmetics: number systems: hex, binary, octal, decimal. Boolean Algebra,
-          logic functions. Logic gates, Integrateed circuit modules: multiplexers, demultiplexers, decoders, encoders, and
-          latches. VHDL hardware modeling programs.</td>
-      </tr>
-      <tr>
-        <td>Object-oriented programming</td>
-        <td>Object oriented programming using JAVA: Abstraction, Inheritance, Encapsulation, Polymorphism.</td>
-      </tr>
-      <tr>
-        <td>Programming fundamentals</td>
-        <td>Basic procedural programing using c++, conditionals, modular programming: functions, itteration: loops.</td>
-      </tr>
-      <tr>
-        <td>Linear ALgebra</td>
-        <td>Matrices, vector spaces(span, subspaces, basis, transformation), systems of linear equations, determinant, eigen vectors</td>
-      </tr>
-      <tr>
-        <td>Probability<br>and statistics</td>
-        <td>Counting rules, Sample spaces, Probability, Conditional Probability, Probability Distribution</td>
-      </tr>
-      <tr>
-        <td>Physics 1</td>
-        <td>Kinematics, sound, thermodynamics, fluid mechanics</td>
-      </tr>
-      <tr>
-        <td>Physics 2</td>
-        <td>Electronics, charges, voltage</td>
-      </tr>
-      <tr>
-        <td>Calculus 1</td>
-        <td>limits and continuity, derivatives, difference quotient deffinition, curve sketching/analyzing functions, implicit differentiation, related rates, integration, fundamental theorem of calculus</td>
-      </tr>
-      <tr>
-        <td>Calculus 2</td>
-        <td>Integration techniques, Sequences and Series, Parametric equations, Polar Coordinates</td>
-      </tr>
-    </table>
-
-    <hr>
-    <h3>Projects</h3>
-    <table cellspacing=20px>
-      <tr>
-        <td>Programming a shell in C</td>
-      </tr>
-      <tr>
-        <td>infix to postfix<br>postfix evaluation<br>postfix to infix</td>
-      </tr>
-      <tr>
-        <td>C bitwise arithematic opperations</td>
-      </tr>
-      <tr>
-        <td>Object identification<br>image processing</td>
-      </tr>
-      <tr>
-        <td>SIR disease model</td>
-      </tr>
-      <tr>
-        <td>Permutaions</td>
-      </tr>
-    </table>
-
-    <hr>
-    <table cellspacing=20px>
-      <thead>
-        <h3>Skills</h3>
-      </thead>
-      <tr>
-        <td>Systems Engineering</td>
-      </tr>
-      <tr>
-        <td>Software Engineering</td>
-      </tr>
-      <tr>
-        <td>Web Development</td>
-      </tr>
-      <tr>
-        <td>IOS Development</td>
-      </tr>
-      <tr>
-        <td>C++</td>
-      </tr>
-      <tr>
-        <td>C</td>
-      </tr>
-      <tr>
-        <td>JAVA</td>
-      </tr>
-      <tr>
-        <td>html</td>
-      </tr>
-      <tr>
-        <td>JavaScript</td>
-      </tr>
-      <tr>
-        <td>Swift</td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-      </tr>
-      <tr>
-        <td>MATLAB</td>
-      </tr>
-      <tr>
-        <td>Python</td>
-      </tr>
-      <tr>
-        <td>Bash</td>
-      </tr>
-      <tr>
-        <td>Gawk</td>
-      </tr>
-      <tr>
-        <td>SQL</td>
-      </tr>
-      <tr>
-        <td>Multi-Lingual</td>
-        <td>Proficient in English, Urdu, punjabi Hindi <br>
-          Elementary Knowledge of Spanish
-        </td>
-      </tr>
-    </table>
-
-        <hr>
-    <h3>Summary</h3>
-    <table cellspacing=20px>
-      <tr>
-        <td><p>
-          My name is Uzair Akram and I'm a CS major at UNT. This is a brief summary of advancement so far in the computer science
-      course work. I have taken fundamental of programming in C++, Object oriented programming in Java, Computing foundations:
-      which covers some data models and ADTs, discrete math, mathematical algorithm analysis, automata theory, graph theory,
-      combinatorics. I have also taken Digital Logic design covering computer hardware, logic gates, Integrated circuit
-      modules and binary system of data representation. I have also completed a course in computer organization, the course
-      briefly covers computer architecture and different programming languages, compilation, virtual machine concept and primarily
-      focuses on low level assemlbly language programming using MASM(Microsoft Macro Assembler) on an x86 processor,  I'm also
-      currently taking courses in system programing, where i have learned bitwise programming using C, using scripting languages
-      gawk and bash scripts, I'm currently learning processes and threads. Software engineering is also currentlly in progress,
-      the focus is on the development process, gathering user stories and different diagrams for software development eg. class diagrams,
-      activity diagrams, sequence diagrams etc. There is a major project designing a complete application program, for which we are
-      to learn a programming language of our choice and build an application program with it. Another course this semester is
-      data structures and algorithms. Where i learn different data structure such as linked lists, stacks queues, trees, heaps,
-      hash tables and searching algorithms. My primary experience in programming is with Java, C++, and I study swift on
-      my own time for building iOS app development.<br>
-        My journey in computer science began partially in seeking to understand and demystifying how computers work. My understanding
-      of computers thus far is that a computer is a system of integrated circuits that can represent algorithmic logic;
-      execute commands or instructions from memory in a specific order. It can represent information and boolean logic using
-      binary states (either electrical current is passing through or not). It can also simulate mathematical logic and perform
-      mathematical computations using adders, comparators, and other circuits. It also uses various digital logic circuits to
-      implement digital functions: decoders, encoders, multiplexers and demultiplexers.<br>
-        As i advance through my degree plan, I plan to focus on machine learning and artificial intelligence. I believe this focus
-      will present a good challenge and will help me build an understanding of computation as it relates to cognition.<br>
-        Computer Science however is not a study of computers but a study of computation. Computers are a tool for performing
-      computations. Computation is methodology for producing imperative knowledge. Computation can be analogous to a mathematical
-      function for a given set of inputs there is a defined output. Many professors say "Computation is both an art and a science"
-      the creation of a computational procedure or algortihm is both a creative and a logical process. I think that computer science
-      is a great field for me as it allows me to engages my mind in problem solving and critical thinking, which I enjoy.
-
-</p></td>
-      </tr>
-    </table>
-
-    <hr>
-    <h3>Hobbies</h3>
-    <ol>
-      <li>Chess</li>
-      <li>Soccer</li>
-      <li>Coding</li>
-      <li>Self-teaching</li>
-        <ol type="a">
-          <li>Systems Programming</li>
-          <li>IOS development</li>
-          <li>Web Development</li>
-          <li>Databases</li>
-        </ol>
-      <li>Reading</li>
-      <li>Math</li>
-      <ol type="I">
-        <li>calculus</li>
-        <li>Linear Algebra</li>
-        <li>Geometry</li>
-      </ol>
-      <li>Martial Arts</li>
-      <li>Cricket</li>
-      <li>Cars</li>
-      <li>History</li>
-      <li>Literature</li>
-    </ol>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-    <hr>
-
-    <h4>JAVA</h4>
-    <code>
-      public class HelloWorld{<br>
-            public static void main(String[] args){<br>
-                system.out.printf("Hello World!\n");<br>
-            }<br>
-      }<br>
-    </code>
-
-    <h4>C++</h4>
-    <code>
-      #include &#60;iostream&#62; <br> <br>
-      using namespace std;<br> <br>
-      int main(char **argv, int argc){<br>
-        cout << "Hello World!\n";<br>
-      }<br>
-    </code>
-      <table cellspacing=30>
-        <tr>
-          <td><a href="https://github.com/uzairakram0">GitHub</a></td>
-          <td>
-            <a href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">html cheatsheet</a></td>
-          <td><a href="contact.html">contact me</a></td>
-          <td><a href="memes.html">Memes</a></td>
-        </tr>
-      </table>
-
 
   </body>
 </html>
