--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,8 @@
 
         <td>
           <b>Role:</b> Jr. Software Engineer: DevOps, Microsoft Azure, Angular and .Net Core development and SQL server.
-          <br>Web app development.
+          <br>Web App Development.
+          <br>Agile Development
         </td>
       </tr>
       <tr>
@@ -256,21 +257,49 @@ Abiding by hospital policies procedures.<br>
 
     <hr>
     <h3>Projects</h3>
-    <table cellspacing=20px>
+    <table cellspacing=30px>
       <tr>
-        <td>Programming a shell in C</td>
+        <td>Parkinson’s Disease biomarker</td>
+        <td>Capstone project - as part of a research effort in Parkinson's disease my team developed a pupil tracking algorithm which records a patient’s post-illumination pupillary response.</td>
+      </tr>
+      <tr>
+        <td>Q-Learning Tic Tac Toe</td>
+        <td>Simulating TicTacToe player agents with reinforcement Learning.</td>
+      </tr>
+      <tr>
+        <td>Proxy Server</td>
+        <td>Proxy Server in C that handles HTTP requests by returning or forwarding and caching  raw HTML web pages for a single client using socket Programming in C.</td>
+      </tr>
+      <tr>
+        <td>Programming a SubShell</td>
+        <td>Programmed a linux subshell using C. Support I/O redirection using pipes, shell scripts, signal handling: team effort.</td>
+      </tr>
+      <tr>
+        <td>SIR cellular Automata Simulation</td>
+        <td> Modeling a disease outbreak using cellular Automata SIRV health state model of cylindrical region of varied sizes on a 2d lattice with a Moore neighbor configuration.<br>
+              Implemented using a recursive algorithm, preserving periodic states of outbreak and representing regions using wrap around 2d vectors.</td>
+      </tr>
+      <tr>
+        <td>Web Application</td>
+        <td>Writing a hospital management Web Application, using mongoDB as a backend database. Used EJS files  in the front-end to render dynamic pages. Host agnostic.</td>
+      </tr>
+      <tr>
+        <td>Bitwise Arithmetics</td>
+        <td>Programming arithmetic operations: addition, subtraction, multiplication and division using C Bitwise operations.</td>
+      </tr>
+      <tr>
+        <td>Empirical test binary search</td>
+        <td>Empirically testing binary search time efficiency implemented in MASM assembly language and C++. </td>
+      </tr>
+      <tr>
+        <td>Link State Algorithm</td>
+        <td>Printing routing tables using Dijkstra’s link state routing algorithm.</td>
       </tr>
       <tr>
         <td>infix to postfix<br>postfix evaluation<br>postfix to infix</td>
       </tr>
       <tr>
-        <td>C bitwise arithematic opperations</td>
-      </tr>
-      <tr>
         <td>Object identification<br>image processing</td>
-      </tr>
-      <tr>
-        <td>SIR disease model</td>
       </tr>
       <tr>
         <td>Permutaions</td>
@@ -293,6 +322,36 @@ Abiding by hospital policies procedures.<br>
       </tr>
       <tr>
         <td>IOS Development</td>
+      </tr>
+      <tr>
+        <td>Multithreaded programming: POSIX Threads.</td>
+      </tr>
+      <tr>
+        <td>Inter Process communication: —Pipes & Sockets</td>
+      </tr>
+      <tr>
+        <td>Programming paradigms: Object Oriented, Imperative.</td>
+      </tr>
+      <tr>
+        <td>Linux API:  System calls</td>
+      </tr>
+      <tr>
+        <td>REGEX</td>
+      </tr>
+      <tr>
+        <td>Version Control: git</td>
+      </tr>
+      <tr>
+        <td>Machine Learning: jupyter notebooks, Tensor Flow, scikit.</td>
+      </tr>
+      <tr>
+        <td>Writing technical documents.</td>
+      </tr>
+      <tr>
+        <td>UML</td>
+      </tr>
+      <tr>
+        <td>Agile development</td>
       </tr>
       <tr>
         <td>C++</td>
