--- a/cv.html
+++ b/cv.html
@@ -146,7 +146,7 @@ Abiding by hospital policies procedures.<br>
       <th>coursework</th>
       <tr>
         <td>Capstone Project</td>
-        <td></td>
+        <td>Capstone project - as part of a research effort in Parkinson's disease my team developed a pupil tracking algorithm which records a patient’s post-illumination pupillary response.</td>
       </tr>
       <tr>
       <tr>
