updated index.html to look less depressing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    
+
     <h1 align=center>Uzair Akram</h1>
 
     <table cellspacing=30>
@@ -22,6 +22,10 @@
         <td><a href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">html cheatsheet</a></td>
       </tr>
     </table>
+    <table align=center>
+      <td><img src="images/starry-night.jpg" alt=""></td>
+    </table>
+
 
   </body>
 </html>
